test/expected/k_ns_typedef_i.out
struct A { namespace B { typedef int Int; } }
                     ^
22: error: namespace can not nest inside struct
